# bedrust

./: Cargo.toml
src/: constants.rs  lib.rs  utils.rs
src/models/: claudev3.rs  cohere.rs  converse.rs  converse_stream.rs  mod.rs
