[package]
name = "bedrust"
description = "A command line tool to invoke and work with Large Language models on AWS, using Amazon Bedrock"
version = "0.7.4"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>", "Stephen Barr <stephen.barr@devfactory.com>", "Russel Cohen <rcoh@rcoh.me>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
categories = ["command-line-utilities", "generative-ai"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/bedrust"
exclude = [
"img/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
