[package]
name = "bedrust"
description = "A command line tool to invoke and work with Large Language models on AWS, using Amazon Bedrock"
version = "0.8.5"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>", "Stephen Barr <stephen.barr@devfactory.com>", "Russel Cohen <rcoh@rcoh.me>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/bedrust"
exclude = [
"img/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde.workspace = true
tokio.workspace = true

anyhow = "1.0.95"
aws-sdk-bedrock = "1.67.0"
aws-sdk-bedrockruntime = "1.67.0"
aws-types = "1.3.3"
chrono = "0.4.39"
lazy_static = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.134"
